// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`other-appeals GET /other-appeals/add should render the "Enter the appeal reference number" page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal APP/Q9999/D/21/351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form method="POST">
                <div class="govuk-form-group">
                    <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="add-other-appeals-reference"> Enter the appeal reference number</label></h1>
                    <input class="govuk-input govuk-input--width-10" id="add-other-appeals-reference"
                    name="addOtherAppealsReference" type="text" value="">
                </div>
                <button type="submit" class="govuk-button govuk-button" data-module="govuk-button"
                id="filters-submit">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`other-appeals GET /other-appeals/confirm should render the "Related appeal details" page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal APP/Q9999/D/21/351062</span>
            <h1 class="govuk-heading-l">Related appeal details</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full govuk-!-margin-top-5 govuk-!-margin-bottom-6">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal reference</dt>
                            <dd class="govuk-summary-list__value">12345</dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal type</dt>
                            <dd class="govuk-summary-list__value">Planning Appeal (W)</dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                            <dd class="govuk-summary-list__value"></dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Local planning authority (LPA)</dt>
                            <dd                             class="govuk-summary-list__value">Bristol City Council</dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appellant name</dt>
                            <dd class="govuk-summary-list__value">Mr John Wick</dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Agent name</dt>
                            <dd class="govuk-summary-list__value">Mr John Smith (Smith Planning Agency)</dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <div class="govuk-grid-row">
                            <div class="govuk-grid-column-full">
                                <div class="govuk-form-group">
                                    <fieldset class="govuk-fieldset">
                                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Do you want to relate these appeals?</legend>
                                        <div class="govuk-radios"
                                        data-module="govuk-radios">
                                            <div class="govuk-radios__item">
                                                <input class="govuk-radios__input" id="relate-appeals-answer" name="relateAppealsAnswer"
                                                type="radio" value="yes">
                                                <label class="govuk-label govuk-radios__label" for="relate-appeals-answer">Yes, relate this appeal to APP/Q9999/D/21/351062</label>
                                            </div>
                                            <div class="govuk-radios__item">
                                                <input class="govuk-radios__input" id="relate-appeals-answer-2" name="relateAppealsAnswer"
                                                type="radio" value="no">
                                                <label class="govuk-label govuk-radios__label" for="relate-appeals-answer-2">No, return to search</label>
                                            </div>
                                        </div>
                                    </fieldset>
                                </div>
                            </div>
                        </div>
                        <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`other-appeals GET /other-appeals/manage should render the "Do you want to remove the relationship?" page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                            <h1 class="govuk-fieldset__heading"> Do you want to remove the relationship between appeal 2 and appeal 351062?</h1>
                        </legend>
                        <div class="govuk-radios" data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="remove-appeal-relationship" name="removeAppealRelationship"
                                type="radio" value="yes">
                                <label class="govuk-label govuk-radios__label" for="remove-appeal-relationship">Yes</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="remove-appeal-relationship-2" name="removeAppealRelationship"
                                type="radio" value="no">
                                <label class="govuk-label govuk-radios__label" for="remove-appeal-relationship-2">No</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`other-appeals GET /other-appeals/manage should render the "Do you want to remove the relationship?" page with the error if the answer was not provided 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#remove-appeal-relationship">You must answer if you want to remove the relationship</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                            <h1 class="govuk-fieldset__heading"> Do you want to remove the relationship between appeal 2 and appeal 351062?</h1>
                        </legend>
                        <div class="govuk-radios" data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="remove-appeal-relationship" name="removeAppealRelationship"
                                type="radio" value="yes">
                                <label class="govuk-label govuk-radios__label" for="remove-appeal-relationship">Yes</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="remove-appeal-relationship-2" name="removeAppealRelationship"
                                type="radio" value="no">
                                <label class="govuk-label govuk-radios__label" for="remove-appeal-relationship-2">No</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`other-appeals GET /other-appeals/manage should render the "Manage related appeals" page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Manage related appeals</h1>
        </div>
    </div>
    <h2 class="govuk-!-margin-top-6">Related appeals</h2>
    <table class="govuk-table">
        <thead class="govuk-table__head">
            <tr class="govuk-table__row">
                <th scope="col" class="govuk-table__header">Appeal Reference</th>
                <th scope="col" class="govuk-table__header">Appeal type</th>
                <th scope="col" class="govuk-table__header govuk-!-text-align-right">Action</th>
            </tr>
        </thead>
        <tbody class="govuk-table__body">
            <tr class="govuk-table__row">
                <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/2" aria-label="Appeal 2">2</a>
                </td>
                <td class="govuk-table__cell">Unknown</td>
                <td class="govuk-table__cell govuk-!-text-align-right"><a class="govuk-link" data-cy="remove-appeal-2" href="/appeals-service/appeal-details/1/other-appeals/remove/2/100">Remove<span class="govuk-visually-hidden"> related appeal 2</span></a>
                </td>
            </tr>
            <tr class="govuk-table__row">
                <td class="govuk-table__cell"><a class="govuk-link" href="" aria-label="Appeal 3">3 (Horizon)</a>
                </td>
                <td class="govuk-table__cell">Unknown</td>
                <td class="govuk-table__cell govuk-!-text-align-right"><a class="govuk-link" data-cy="remove-appeal-3" href="/appeals-service/appeal-details/1/other-appeals/remove/3/101">Remove<span class="govuk-visually-hidden"> related appeal 3</span></a>
                </td>
            </tr>
        </tbody>
    </table>
</main>"
`;

exports[`other-appeals POST /other-appeals/add should re-render the "Enter the appeal reference number" page with error "Enter a valid appeal reference", if the provided appeal reference was invalid 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#add-other-appeals-reference">Enter a real appeal reference number</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal APP/Q9999/D/21/351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form method="POST">
                <div class="govuk-form-group govuk-form-group--error">
                    <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="add-other-appeals-reference"> Enter the appeal reference number</label></h1>
                    <p id="add-other-appeals-reference-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Enter a real appeal reference
                        number</p>
                    <input class="govuk-input govuk-input--width-10 govuk-input--error"
                    id="add-other-appeals-reference" name="addOtherAppealsReference" type="text"
                    value="7654321" aria-describedby="add-other-appeals-reference-error">
                </div>
                <button type="submit" class="govuk-button govuk-button" data-module="govuk-button"
                id="filters-submit">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`other-appeals POST /other-appeals/add should re-render the "Enter the appeal reference number" page with error "Enter an appeal reference", if no appeal reference was provided 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#add-other-appeals-reference">Enter the appeal reference number</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal APP/Q9999/D/21/351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form method="POST">
                <div class="govuk-form-group govuk-form-group--error">
                    <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="add-other-appeals-reference"> Enter the appeal reference number</label></h1>
                    <p id="add-other-appeals-reference-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Enter the appeal reference
                        number</p>
                    <input class="govuk-input govuk-input--width-10 govuk-input--error"
                    id="add-other-appeals-reference" name="addOtherAppealsReference" type="text"
                    value="" aria-describedby="add-other-appeals-reference-error">
                </div>
                <button type="submit" class="govuk-button govuk-button" data-module="govuk-button"
                id="filters-submit">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`other-appeals POST /other-appeals/add should re-render the "Enter the appeal reference number" page with the expected error, if the provided appeal reference contains both numbers and letters 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#add-other-appeals-reference">Enter appeal reference number using numbers 0 to 9</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal APP/Q9999/D/21/351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form method="POST">
                <div class="govuk-form-group govuk-form-group--error">
                    <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="add-other-appeals-reference"> Enter the appeal reference number</label></h1>
                    <p id="add-other-appeals-reference-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Enter appeal reference
                        number using numbers 0 to 9</p>
                    <input class="govuk-input govuk-input--width-10 govuk-input--error"
                    id="add-other-appeals-reference" name="addOtherAppealsReference" type="text"
                    value="12345AB" aria-describedby="add-other-appeals-reference-error">
                </div>
                <button type="submit" class="govuk-button govuk-button" data-module="govuk-button"
                id="filters-submit">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`other-appeals POST /other-appeals/add should re-render the "Enter the appeal reference number" page with the expected error, if the provided appeal reference contains only letters 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#add-other-appeals-reference">Enter appeal reference number using numbers 0 to 9</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal APP/Q9999/D/21/351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form method="POST">
                <div class="govuk-form-group govuk-form-group--error">
                    <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="add-other-appeals-reference"> Enter the appeal reference number</label></h1>
                    <p id="add-other-appeals-reference-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Enter appeal reference
                        number using numbers 0 to 9</p>
                    <input class="govuk-input govuk-input--width-10 govuk-input--error"
                    id="add-other-appeals-reference" name="addOtherAppealsReference" type="text"
                    value="ABCDEFG" aria-describedby="add-other-appeals-reference-error">
                </div>
                <button type="submit" class="govuk-button govuk-button" data-module="govuk-button"
                id="filters-submit">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`other-appeals POST /other-appeals/add should re-render the "Enter the appeal reference number" page with the expected error, if the provided appeal reference is greater than 7 digits 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#add-other-appeals-reference">Appeal reference number must be 7 numbers</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal APP/Q9999/D/21/351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form method="POST">
                <div class="govuk-form-group govuk-form-group--error">
                    <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="add-other-appeals-reference"> Enter the appeal reference number</label></h1>
                    <p id="add-other-appeals-reference-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Appeal reference number
                        must be 7 numbers</p>
                    <input class="govuk-input govuk-input--width-10 govuk-input--error"
                    id="add-other-appeals-reference" name="addOtherAppealsReference" type="text"
                    value="12345678" aria-describedby="add-other-appeals-reference-error">
                </div>
                <button type="submit" class="govuk-button govuk-button" data-module="govuk-button"
                id="filters-submit">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`other-appeals POST /other-appeals/add should re-render the "Enter the appeal reference number" page with the expected error, if the provided appeal reference is less than 7 digits 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#add-other-appeals-reference">Appeal reference number must be 7 numbers</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal APP/Q9999/D/21/351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form method="POST">
                <div class="govuk-form-group govuk-form-group--error">
                    <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="add-other-appeals-reference"> Enter the appeal reference number</label></h1>
                    <p id="add-other-appeals-reference-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Appeal reference number
                        must be 7 numbers</p>
                    <input class="govuk-input govuk-input--width-10 govuk-input--error"
                    id="add-other-appeals-reference" name="addOtherAppealsReference" type="text"
                    value="123456" aria-describedby="add-other-appeals-reference-error">
                </div>
                <button type="submit" class="govuk-button govuk-button" data-module="govuk-button"
                id="filters-submit">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`other-appeals POST /other-appeals/confirm should re-render the "Related appeal details" page with the error if the answer was not provided 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#relate-appeals-answer">You must answer if you want to relate appeals</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal APP/Q9999/D/21/351062</span>
            <h1 class="govuk-heading-l">Related appeal details</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full govuk-!-margin-top-5 govuk-!-margin-bottom-6">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal reference</dt>
                            <dd class="govuk-summary-list__value">12345</dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal type</dt>
                            <dd class="govuk-summary-list__value">Planning Appeal (W)</dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                            <dd class="govuk-summary-list__value"></dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Local planning authority (LPA)</dt>
                            <dd                             class="govuk-summary-list__value">Bristol City Council</dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appellant name</dt>
                            <dd class="govuk-summary-list__value">Mr John Wick</dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Agent name</dt>
                            <dd class="govuk-summary-list__value">Mr John Smith (Smith Planning Agency)</dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <div class="govuk-grid-row">
                            <div class="govuk-grid-column-full">
                                <div class="govuk-form-group">
                                    <fieldset class="govuk-fieldset">
                                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Do you want to relate these appeals?</legend>
                                        <div class="govuk-radios"
                                        data-module="govuk-radios">
                                            <div class="govuk-radios__item">
                                                <input class="govuk-radios__input" id="relate-appeals-answer" name="relateAppealsAnswer"
                                                type="radio" value="yes">
                                                <label class="govuk-label govuk-radios__label" for="relate-appeals-answer">Yes, relate this appeal to APP/Q9999/D/21/351062</label>
                                            </div>
                                            <div class="govuk-radios__item">
                                                <input class="govuk-radios__input" id="relate-appeals-answer-2" name="relateAppealsAnswer"
                                                type="radio" value="no">
                                                <label class="govuk-label govuk-radios__label" for="relate-appeals-answer-2">No, return to search</label>
                                            </div>
                                        </div>
                                    </fieldset>
                                </div>
                            </div>
                        </div>
                        <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;
